# routes/routes.go
@@ -1,33 +1,0 @@
-package routes
-
-import (
-	"github.com/gofiber/fiber/v3"
-	_ "github.com/nebnhoj/strand/docs"
-	middlewares "github.com/nebnhoj/strand/middlewares/jwt"
-	auth "github.com/nebnhoj/strand/modules/auth"
-	todos "github.com/nebnhoj/strand/modules/todos"
-	users "github.com/nebnhoj/strand/modules/users"
-)
-
-func BindRoutes(router fiber.Router) {
-	api := router.Group("/api")
-	UserRoutes(api)
-	TodoRoutes(api)
-	AuthRoutes(api)
-}
-
-func UserRoutes(router fiber.Router) {
-	userRoute := router.Group("/users", middlewares.Protected(), middlewares.HasAdminRole)
-	userRoute.Get("", users.GetUsers).Name("Get Users")
-	userRoute.Get("/:id", users.GetUser).Name("Get User By ID")
-	userRoute.Post("", users.CreateUser).Name("Create User")
-}
-
-func TodoRoutes(router fiber.Router) {
-	router.Post("/todos", todos.CreateTodo).Name("Create Todo")
-	router.Get("/todos", todos.FindAll).Name("Get Todos")
-}
-
-func AuthRoutes(router fiber.Router) {
-	router.Post("/auth", auth.Authenticate).Name("Authenticate User")
-}
